test(config): complete schema and semantic mapping contracts